tests/error/comptime/check_slice_construction04.bz
// error: invalid memory range for a slice of type '[: i32]'
// note: while evaluating expression at compile time
// note: begin and end addresses point to different memory segments
// note: begin address points to this stack object
// note: end address points to this global object
// error: failed to evaluate expression at compile time
consteval global = 0;

function test()
{
	(consteval {
		let i = 0;
		__builtin_slice_from_ptrs(&i, &global);
	});
}
